--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,9 @@
         Zweiradverleihsysteme
     </title>
     <meta charset="utf8" />
-    <link rel="stylesheet" type="text/css" href="site.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=2" />
+    <base href="paulbraetz.github.io/Zweihradverleihsysteme"/>
+    <link rel="stylesheet" type="text/css" href="/wwwroot/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="/wwwroot/favicon.ico?v=1" />
 </head>
 
 <body>
@@ -96,7 +97,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="/images/0 nextbike.png" />
+                <img src="/wwwroot/images/0 nextbike.png" />
                 <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
             </div>
         </div>
