use base uri in img and link tags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         Zweiradverleihsysteme
     </title>
     <meta charset="utf8" />
-    <base href="paulbraetz.github.io/Zweihradverleihsysteme"/>
-    <link rel="stylesheet" type="text/css" href="/wwwroot/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="/wwwroot/favicon.ico?v=1" />
+    <base href="paulbraetz.github.io/Zweihradverleihsysteme/wwwroot"/>
+    <link rel="stylesheet" type="text/css" href="~/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico?v=1" />
 </head>
 
 <body>
@@ -97,7 +97,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="/wwwroot/images/0 nextbike.png" />
+                <img src="~/images/0 nextbike.png" />
                 <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
             </div>
         </div>
