--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </title>
     <meta charset="utf8" />
     <base href="paulbraetz.github.io/Zweiradverleihsysteme/wwwroot"/>
-    <link rel="stylesheet" type="text/css" href="~/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico?v=1" />
+    <link rel="stylesheet" type="text/css" href="css/site.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=1" />
 </head>
 
 <body>
@@ -97,7 +97,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="~/images/0 nextbike.png" />
+                <img src="images/0 nextbike.png" />
                 <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
             </div>
         </div>
