--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         Zweiradverleihsysteme
     </title>
     <meta charset="utf8" />
-    <base href="paulbraetz.github.io/Zweiradverleihsysteme/wwwroot"/>
-    <link rel="stylesheet" type="text/css" href="css/site.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico?v=1" />
+    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
 
 <body>
@@ -97,7 +96,7 @@
                         </p>
                     </div>
                 </div>
-                <img src="images/0 nextbike.png" />
+                <img src="wwwroot/images/0 nextbike.png" />
                 <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
             </div>
         </div>
