css link version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css" />
+    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css?v=1" />
     <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
 
