added image container class

--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
                             Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden.
                         </div>
                     </div>
-                    <img src="wwwroot/images/0 nextbike.png" />
-                    <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
+                    <div class="image-container">
+                        <img src="wwwroot/images/0 nextbike.png" />
+                        <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
+                    </div>
                 </div>
             </div>
         </div>
