--- a/index.html
+++ b/index.html
@@ -44,6 +44,38 @@
                         <a href="#zieldefinition">
                             Zieldefinition
                         </a>
+                        <ol>
+                            <li>
+                                <a href="#automatisierung">
+                                    Automatisierung
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#verwaltung">
+                                    Verwaltung
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#wartung">
+                                    Wartung
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#wirtschaftlichkeit">
+                                    Wirtschaftlichkeit
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#lageunabhängigkeit">
+                                    Lageunabhägigkeit
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#datenschutz">
+                                    Datenschutz
+                                </a>
+                            </li>
+                        </ol>
                     </li>
                     <li>
                         <a href="#funktionsanalyse">
@@ -83,6 +115,26 @@
                 </ol>
             </div>
         </div>
+        <divb class="topic">
+            <div class="title">
+                Einleitung
+            </div>
+            <div class="content">
+                <span>
+                    Im Rahmen des Moduls Telematiksysteme der Semestergruppe T21 wird in diesem Dokument eine
+                    Systemanalyse von Zweiradverleihsystemen aufgestellt. Das Ziel des Systems muss definiert werden, um
+                    eine feste Aufstellung von Anforderungen zu ermöglichen. Anhand dieser Anforderungen lassen sich die
+                    Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Implementiert werden diese
+                    Funktionen durch die Wahl von Komponenten, die gemeinsam mit ihren Material- Informations- und
+                    Energieflüssen sowie Interaktionen das Systemabbild ausmachen. Das Systemabbild stellt eine konkret
+                    realisierbare Umsetzung eines Zweiradverleihsystems dar, derer Fähigkeiten und Grenzen anhand einer
+                    Leistungsanalyse untersucht werden. Aufgrund der Leistungsanalyse kann aufgezeigt werden, wie
+                    zufriedenstellend die Anforderungen der Zieldefinition im Systemabbild umgesetzt wurden. Eine
+                    Bewertung von Zweiradverleihsystemen durch wissenschaftliche, wirtschaftliche und mediale Quellen
+                    sowie die persönliche Meinung der Autoren wird in der Umsetzungskritik dargestellt.
+                </span>
+            </div>
+        </divb>
         <div class="topic" id="zieldefinition">
             <div class="title">
                 Zieldefinition
@@ -99,7 +151,7 @@
                         des
                         Systems zuordnen.
                     </span>
-                    <div class="topic">
+                    <div class="topic" id="automatisierung">
                         <div class="title">
                             Automatisierung
                         </div>
@@ -112,7 +164,7 @@
                             automatisierten, digitalen Systems geringer.
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="verwaltung">
                         <div class="title">
                             Verwaltung
                         </div>
@@ -127,7 +179,7 @@
                             vereinfachen.
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="wartung">
                         <div class="title">
                             Wartung
                         </div>
@@ -142,7 +194,7 @@
                             sind verpflichtend.
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="wirtschaftlichkeit">
                         <div class="title">
                             Wirtschaftlichkeit
                         </div>
@@ -152,7 +204,7 @@
                             wirtschaftlichkeit optimiert sein, summiert müssen sie dem Ziel jedoch gerecht werden.
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="lageunabhängigkeit">
                         <div class="title">
                             Lageunabhägigkeit
                         </div>
@@ -166,7 +218,7 @@
                             Spezialisierung auf lokale Zahlungsmittel möglichst zu vermeiden.
                         </div>
                     </div>
-                    <div class="topic">
+                    <div class="topic" id="datenschutz">
                         <div class="title">
                             Datenschutz
                         </div>
