--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                         <a href="#funktionsanalyse">
                             Funktionsanalyse
                         </a>
+                        <ol>
+                            <li>
+                                <a href="#ortung">
+                                    Ortung
+                                </a>
+                            </li>
+                        </ol>
                     </li>
                     <li>
                         <a href="#komponentenwahl">
@@ -115,7 +122,7 @@
                 </ol>
             </div>
         </div>
-        <divb class="topic">
+        <div class="topic">
             <div class="title">
                 Einleitung
             </div>
@@ -134,7 +141,7 @@
                     sowie die persönliche Meinung der Autoren wird in der Umsetzungskritik dargestellt.
                 </span>
             </div>
-        </divb>
+        </div>
         <div class="topic" id="zieldefinition">
             <div class="title">
                 Zieldefinition
@@ -228,10 +235,6 @@
                             Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden.
                         </div>
                     </div>
-                    <div class="image-container">
-                        <img src="wwwroot/images/0 nextbike.png" />
-                        <span class="image-description">Ein Zweirad der Firma Nextbike [0]</span>
-                    </div>
                 </div>
             </div>
         </div>
@@ -240,7 +243,30 @@
                 Funktionsanalyse
             </div>
             <div class="content">
-
+                <div class="column">
+                    <span>
+                        Aus der Zieldefinition lassen sich Funktionen ableiten, die für den Betrieb des Systems vonnöten
+                        sind.
+                    </span>
+                    <div class="topic" id="ortung">
+                        <div class="title">
+                            Ortung
+                        </div>
+                        <div class="content">
+                            Die Verteilung von Zweirädern muss verwaltet werden. Nutzer müssen das nächstliegende Rad
+                            finden können. Eine Ortungsfunktion ist also unabdingbar.
+                        </div>
+                    </div>
+                    <div class="topic" id="abrechnung">
+                        <div class="title">
+                            Abrechnung
+                        </div>
+                        <div class="content">
+                            Die Kosten der Nutzung von Zweirädern müssen nach einem Schlüssel berechnet werden. Zwei
+                            Möglichkeiten der Abrechnung sind zeit- oder streckenabhängige Gebühren.
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="topic" id="komponentenwahl">
