--- a/template.html
+++ b/template.html
@@ -1,5 +1,10 @@
 <div class="topic">
     <div class="title">
+        <!--
+            Title Here
+        -->
+    </div>
+    <div class="content">        
         <span>
             <!--
                 Text here
@@ -10,6 +15,11 @@
 
 <div class="topic">
     <div class="title">
+        <!--
+            Title Here
+        -->
+    </div>
+    <div class="content">
         <div class="column">
             <span>
                 <!--
@@ -18,6 +28,11 @@
             </span>
             <div class="topic">
                 <div class="title">
+                    <!--
+                        Subtitle Here
+                    -->
+                </div>
+                <div class="content">        
                     <span>
                         <!--
                             Text here
