added image template

--- a/index.html
+++ b/index.html
@@ -235,6 +235,12 @@
                             Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden.
                         </div>
                     </div>
+                    <div class="image-container">
+                        <img src="/wwwroot/images/0 nextbike.png">
+                        <span class="image-description">
+                            [0] Ein Zweirad der Firma Nextbike
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
