--- a/template.html
+++ b/template.html
@@ -43,3 +43,13 @@
         </div>
     </div>
 </div>
+
+
+<div class="image-container">
+    <img src="/wwwroot/images/0 nextbike.png">
+    <span class="image-description">
+        <!--
+            Beschreibung
+        -->
+    </span>
+</div>
