--- a/index.html
+++ b/index.html
@@ -87,17 +87,24 @@
                                     Ortung
                                 </a>
                             </li>
+                            <li>
+                                <a href="#systemabbild-abstrakt">
+                                    Systemabbild - Abstrakt
+                                </a>
+                            </li>
                         </ol>
                     </li>
                     <li>
                         <a href="#komponentenwahl">
                             Komponentenwahl
                         </a>
-                    </li>
-                    <li>
-                        <a href="#systemabbild">
-                            Systemabbild
-                        </a>
+                        <ol>
+                            <li>
+                                <a href="#systemabbild-konkret">
+                                    Systemabbild - Konkret
+                                </a>
+                            </li>
+                        </ol>
                     </li>
                     <li>
                         <a href="#leistungsanalyse">
@@ -131,13 +138,12 @@
                     Im Rahmen des Moduls Telematiksysteme der Semestergruppe T21 wird in diesem Dokument eine
                     Systemanalyse von Zweiradverleihsystemen aufgestellt. Das Ziel des Systems muss definiert werden, um
                     eine feste Aufstellung von Anforderungen zu ermöglichen. Anhand dieser Anforderungen lassen sich die
-                    Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Implementiert werden diese
-                    Funktionen durch die Wahl von Komponenten, die gemeinsam mit ihren Material- Informations- und
-                    Energieflüssen sowie Interaktionen das Systemabbild ausmachen. Das Systemabbild stellt eine konkret
-                    realisierbare Umsetzung eines Zweiradverleihsystems dar, derer Fähigkeiten und Grenzen anhand einer
-                    Leistungsanalyse untersucht werden. Aufgrund der Leistungsanalyse kann aufgezeigt werden, wie
-                    zufriedenstellend die Anforderungen der Zieldefinition im Systemabbild umgesetzt wurden. Eine
-                    Bewertung von Zweiradverleihsystemen durch wissenschaftliche, wirtschaftliche und mediale Quellen
+                    Funktionen identifizieren, die für den Betrieb des Systems vonnöten sind. Die Summe der Funktionen
+                    und ihrer Interaktionen sowie Material- Informations- und Energieflüsse werden als Systemabbild
+                    dargestellt. Implementiert werden diese Funktionen durch Komponenten, die in das
+                    Systemabbild eingesetzt werden. Das Systemabbild stellt eine konkret realisierbare Umsetzung eines
+                    Zweiradverleihsystems dar. Eine Bewertung von
+                    Zweiradverleihsystemen durch wissenschaftliche, wirtschaftliche und mediale Quellen
                     sowie die persönliche Meinung der Autoren wird in der Umsetzungskritik dargestellt.
                 </span>
             </div>
@@ -150,13 +156,10 @@
                 <div class="column">
                     <span>
                         Zweiradverleihsysteme sind Systeme, die es einem Nutzer oder Kunden erlauben, ein Zweirad zu
-                        leihen.
-                        Neben
-                        dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die Definition sekundärer Ziele
-                        vonnöten, um eine zufriedenstellende Umsetzung dessen zu ermöglichen. Diese Ziele lassen sich zu
-                        verschiedenen Graden den wirtschaftlichen, ökologischen und sozialen Interessen der Stakeholder
-                        des
-                        Systems zuordnen.
+                        leihen. Neben dieser grundlegenden Eigenschaft eines Zweiradverleihsystems ist die Definition
+                        sekundärer Ziele vonnöten, um eine zufriedenstellende Umsetzung dessen zu ermöglichen. Diese
+                        Ziele lassen sich zu verschiedenen Graden den wirtschaftlichen, ökologischen, rechtlichen und
+                        sozialen Interessen der Stakeholder des Systems zuordnen.
                     </span>
                     <div class="topic" id="automatisierung">
                         <div class="title">
@@ -166,9 +169,9 @@
                             Mithilfe strenger Digitalisierung und Prozessautomatisierung kann der Personalaufwand
                             des laufenden Systems minimiert werden. Automatisierte Systeme, die komplexe Aufgaben
                             erfüllen, sind allgemein fehlerresistenter, skalierbarer sowie globaler anwendbar und
-                            damit wirtschaftlicher.
-                            Auch ist der Nutzeraufwand bei Verwendung eines entsprechend ausgelegtem
-                            automatisierten, digitalen Systems geringer.
+                            damit wirtschaftlicher. Auch ist der Nutzeraufwand bei Verwendung eines entsprechend
+                            ausgelegtem automatisierten, digitalen Systems geringer. Dieses Ziel entspricht den
+                            wirtschaftlichen und ökologischen Interessen der Stakeholder.
                         </div>
                     </div>
                     <div class="topic" id="verwaltung">
@@ -180,10 +183,11 @@
                             zentrales Verwaltungssystem vonnöten. Es ist mit einer örtlich stark verteilten sowie
                             variierenden Last zu rechnen. Daher muss das Verwaltungssystem skalierbar und
                             global unabhängig sein. Für Softwarelösungen wird meist auch ein Anspruch an Modularität
-                            gestellt. Dieser kann hier ducrh die Möglichkeit der Erweiterung auf andere Fahrzeuge,
+                            gestellt. Dieser kann hier ducrh die Möglichkeit der Erweiterung auf andere Fahrzeuge und
                             Bezahlmöglichkeiten abgebildet werden. Grundsätzlich sollte das System softwaretechnisch
-                            modern entwickelt werden, um eine langzeitliche Unterstützung und Wartung zu
-                            vereinfachen.
+                            unter Nutzung moderner Strategien entwickelt werden, um eine langzeitliche Unterstützung und
+                            Wartung zu vereinfachen. Dieses Ziel entspricht den wirtschaftlichen Interessen der
+                            Stakeholder.
                         </div>
                     </div>
                     <div class="topic" id="wartung">
@@ -196,9 +200,10 @@
                             wird also auf lange Zeit die laufenden Kosten senken. Eine Balance zwischen initialen
                             Anschaffungskosten und laufenden Wartungskosten muss gefunden werden. Gleiches trifft auf
                             Softwaremodule zu. Diese müssen zukunftsfähig entwickelt werden, um kritische Änderungen
-                            möglichst aufwandsarm zu ermöglichen. Sicherheitsupdates etc. sollten nicht durch die
-                            Steifheit der Software behindert werden. Eine ordentliche Programmierung und Dokumentation
-                            sind verpflichtend.
+                            möglichst aufwandsarm zu ermöglichen. Sicherheits- und andere Updates sollten nicht durch
+                            die Steifheit der Software behindert werden. Eine ordentliche Programmierung und
+                            Dokumentation sind zwingend vonnöten. Dieses Ziel entspricht den wirtschaftlichen,
+                            ökologischen und sozialen Interessen der Stakeholder.
                         </div>
                     </div>
                     <div class="topic" id="wirtschaftlichkeit">
@@ -221,8 +226,9 @@
                             sollte im besten Falle nicht vorhanden, im schlechtesten minimal sein. Das Verwaltungssystem
                             muss global erreichbar sein. Zahlungsmethoden müssen global zugänglich sein, also auch unter
                             Umständen lokale Zahlungsmittel wie Girokarten akzeptieren. Das Zahlen mit international
-                            verwendeten Zahlungsmitteln wie PayPal, SEPA, BTC (o.Ä.) sollte unterstützt sein, um
-                            Spezialisierung auf lokale Zahlungsmittel möglichst zu vermeiden.
+                            verwendeten Zahlungsmitteln wie PayPal, SEPA, Stripe, BTC und anderen sollte unterstützt
+                            sein, um Spezialisierung auf lokale Zahlungsmittel möglichst zu vermeiden. Dieses Ziel
+                            entspricht den wirtschaftlichen Interessen der Stakeholder.
                         </div>
                     </div>
                     <div class="topic" id="datenschutz">
@@ -232,14 +238,9 @@
                         <div class="content">
                             Das System wird mit sensiblen sowie identifizierenden Daten von Nutzern arbeiten.
                             Ortungsdaten, Identitätsdaten sowie Zahlungsdaten müssen vertrauclich behandelt werden.
-                            Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden.
+                            Zusätzlich müssen örtliche Datenschutzbestimmungen wie die DSGVO eingehalten werden. Dieses
+                            Ziel entspricht den rechtlichen und sozialen Interessen der Stakeholder.
                         </div>
-                    </div>
-                    <div class="image-container">
-                        <img src="/wwwroot/images/0 nextbike.png">
-                        <span class="image-description">
-                            [0] Ein Zweirad der Firma Nextbike
-                        </span>
                     </div>
                 </div>
             </div>
@@ -272,6 +273,14 @@
                             Möglichkeiten der Abrechnung sind zeit- oder streckenabhängige Gebühren.
                         </div>
                     </div>
+                    <div class="topic" id="systemabbild-abstrakt">
+                        <div class="title">
+                            Systemabbild - Abstrakt
+                        </div>
+                        <div class="content">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -280,15 +289,17 @@
                 Komponentenwahl
             </div>
             <div class="content">
+                <div class="column">
 
-            </div>
-        </div>
-        <div class="topic" id="systemabbild">
-            <div class="title">
-                Systemabbild
-            </div>
-            <div class="content">
+                    <div class="topic" id="systemabbild-konkret">
+                        <div class="title">
+                            Systemabbild - Konkret
+                        </div>
+                        <div class="content">
 
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="topic" id="leistungsanalyse">
