--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf8" />
     <base href="paulbraetz.github.io/Zweihradverleihsysteme/wwwroot"/>
     <link rel="stylesheet" type="text/css" href="~/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico?v=1" /
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico?v=1" />
 </head>
 
 <body>
