--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <base href="paulbraetz.github.io/Zweihradverleihsysteme"/>
-    <link rel="stylesheet" type="text/css" href="/wwwroot/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="/wwwroot/favicon.ico?v=1" />
+    <link rel="stylesheet" type="text/css" href="Zweihradverleihsysteme/wwwroot/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="Zweihradverleihsysteme/wwwroot/favicon.ico?v=1" />
 </head>
 
 <body>
@@ -466,7 +465,7 @@
                                     Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten.
                                 </span>
                                 <div class="image-container">
-                                    <img src="/wwwroot/images/Systemabbild - Abstrakt.png">
+                                    <img src="Zweihradverleihsysteme/wwwroot/images/Systemabbild - Abstrakt.png">
                                     <span class="image-description">
                                         Systemabbild der Funktionen
                                     </span>
@@ -578,7 +577,7 @@
                                     Systemabbild bilden.
                                 </span>
                                 <div class="image-container">
-                                    <img src="/wwwroot/images/Systemabbild - Konkret.png">
+                                    <img src="Zweihradverleihsysteme/wwwroot/images/Systemabbild - Konkret.png">
                                     <span class="image-description">
                                         Systemabbild der Komponenten
                                     </span>
