--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <link rel="stylesheet" type="text/css" href="Zweihradverleihsysteme/wwwroot/css/site.css" />
-    <link rel="icon" type="image/x-icon" href="Zweihradverleihsysteme/wwwroot/favicon.ico?v=1" />
+    <base href="https://paulbraetz.github.io/Zweihradverleihsysteme/wwwroot/">
+    <link rel="stylesheet" type="text/css" href="css/site.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=1" />
 </head>
 
 <body>
@@ -465,7 +466,7 @@
                                     Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten.
                                 </span>
                                 <div class="image-container">
-                                    <img src="Zweihradverleihsysteme/wwwroot/images/Systemabbild - Abstrakt.png">
+                                    <img src="images/Systemabbild - Abstrakt.png">
                                     <span class="image-description">
                                         Systemabbild der Funktionen
                                     </span>
@@ -577,7 +578,7 @@
                                     Systemabbild bilden.
                                 </span>
                                 <div class="image-container">
-                                    <img src="Zweihradverleihsysteme/wwwroot/images/Systemabbild - Konkret.png">
+                                    <img src="images/Systemabbild - Konkret.png">
                                     <span class="image-description">
                                         Systemabbild der Komponenten
                                     </span>
