fixed id anchors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/wwwroot/">
-    <link rel="stylesheet" type="text/css" href="css/site.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico?v=1" />
+    <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">
+    <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css" />
+    <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
 
 <body>
@@ -42,168 +42,168 @@
             <div class="content">
                 <ol class="table-of-contents">
                     <li>
-                        <a href="#zieldefinition">
+                        <a href="index#zieldefinition">
                             Zieldefinition
                         </a>
                         <ol>
                             <li>
-                                <a href="#automatisierung">
+                                <a href="index#automatisierung">
                                     Automatisierung
                                 </a>
                             </li>
                             <li>
-                                <a href="#verwaltung">
+                                <a href="index#verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="#wartung">
+                                <a href="index#wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="#wirtschaftlichkeit">
+                                <a href="index#wirtschaftlichkeit">
                                     Wirtschaftlichkeit
                                 </a>
                             </li>
                             <li>
-                                <a href="#lageunabhängigkeit">
+                                <a href="index#lageunabhängigkeit">
                                     Lageunabhägigkeit
                                 </a>
                             </li>
                             <li>
-                                <a href="#datenschutz">
+                                <a href="index#datenschutz">
                                     Datenschutz
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="#funktionsanalyse">
+                        <a href="index#funktionsanalyse">
                             Funktionsanalyse
                         </a>
                         <ol>
                             <li>
-                                <a href="#funktion-ortung">
+                                <a href="index#funktion-ortung">
                                     Ortung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-abrechnung">
+                                <a href="index#funktion-abrechnung">
                                     Abrechnung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-wartung">
+                                <a href="index#funktion-wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-interface">
+                                <a href="index#funktion-interface">
                                     Benutzeroberfläche
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-stromversorgung">
+                                <a href="index#funktion-stromversorgung">
                                     Stromversorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-sperrung">
+                                <a href="index#funktion-sperrung">
                                     Sperrung / Entriegelung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-neuverteilung">
+                                <a href="index#funktion-neuverteilung">
                                     Neuverteilung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-entsorgung">
+                                <a href="index#funktion-entsorgung">
                                     Entsorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-verwaltung">
+                                <a href="index#funktion-verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="#funktion-systemabbild">
+                                <a href="index#funktion-systemabbild">
                                     Systemabbild - Abstrakt
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="#komponentenwahl">
+                        <a href="index#komponentenwahl">
                             Komponentenwahl
                         </a>
                         <ol>
                             <li>
-                                <a href="#komponente-ortung">
+                                <a href="index#komponente-ortung">
                                     Ortung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-abrechnung">
+                                <a href="index#komponente-abrechnung">
                                     Abrechnung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-wartung">
+                                <a href="index#komponente-wartung">
                                     Wartung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-interface">
+                                <a href="index#komponente-interface">
                                     Benutzeroberfläche
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-stromversorgung">
+                                <a href="index#komponente-stromversorgung">
                                     Stromversorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-sperrung">
+                                <a href="index#komponente-sperrung">
                                     Sperrung / Entriegelung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-neuverteilung">
+                                <a href="index#komponente-neuverteilung">
                                     Neuverteilung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-entsorgung">
+                                <a href="index#komponente-entsorgung">
                                     Entsorgung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-verwaltung">
+                                <a href="index#komponente-verwaltung">
                                     Verwaltung
                                 </a>
                             </li>
                             <li>
-                                <a href="#komponente-systemabbild">
+                                <a href="index#komponente-systemabbild">
                                     Systemabbild - Konkret
                                 </a>
                             </li>
                         </ol>
                     </li>
                     <li>
-                        <a href="#leistungsanalyse">
+                        <a href="index#leistungsanalyse">
                             Leistungsanalyse
                         </a>
                     </li>
                     <li>
-                        <a href="#umsetzungskritik">
+                        <a href="index#umsetzungskritik">
                             Umsetzungskritik
                         </a>
                     </li>
                     <li>
-                        <a href="#quellenverzeichnis">
+                        <a href="index#quellenverzeichnis">
                             Quellen
                         </a>
                     </li>
@@ -466,7 +466,7 @@
                                     Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten.
                                 </span>
                                 <div class="image-container">
-                                    <img src="images/Systemabbild - Abstrakt.png">
+                                    <img src="wwwroot/images/Systemabbild - Abstrakt.png">
                                     <span class="image-description">
                                         Systemabbild der Funktionen
                                     </span>
@@ -578,7 +578,7 @@
                                     Systemabbild bilden.
                                 </span>
                                 <div class="image-container">
-                                    <img src="images/Systemabbild - Konkret.png">
+                                    <img src="wwwroot/images/Systemabbild - Konkret.png">
                                     <span class="image-description">
                                         Systemabbild der Komponenten
                                     </span>
