changed collapse chevron to angle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">
+    <!--<base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">-->    
     <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css" />
     <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
