--- a/index.html
+++ b/index.html
@@ -492,8 +492,12 @@
                             Ortung
                         </div>
                         <div class="content">
-                            Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden [1]. Um technisch
-                            unabhängiger zu werden, wird dieses KOnzept allerdings ein generisches GNSS Modul nutzen.
+                            <span>
+                                Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräde der Firma
+                                Nextbike nutzen ein solches Modul<a class="source-reference"
+                                    href="#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
+                                zu werden, wird dieses Konzept allerdings ein generisches GNSS Modul nutzen.
+                            </span>
                         </div>
                     </div>
                     <div class="topic" id="komponente-abrechnung">
@@ -501,7 +505,7 @@
                             Abrechnung
                         </div>
                         <div class="content">
-
+                            
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
@@ -603,7 +607,7 @@
                 Quellenverzeichnis
             </summary>
             <div class="content">
-                <ol class="sources">
+                <ol class="sources" id="sources">
                     <li>
                         <a href="https://usermanual.wiki/nextbike/NXTBFVM2/" target="_blank">
                             Nextbike Bordcomputer Instruction Manual
@@ -617,7 +621,7 @@
                     </li>
                     <li>
                         <a href="https://www.nextbike.net/nachhaltigkeit/" target="_blank">
-                           Nextbike - Nachhaltigkeit
+                            Nextbike - Nachhaltigkeit
                         </a>&nbsp;(Author Nextbike, zuletzt aufgerufen: 22.05.2022)​
                     </li>
 
@@ -627,31 +631,36 @@
                         </a>&nbsp;(Author unbekannt, zuletzt aufgerufen: 22.05.2022)​
                     </li>
                     <li>
-                        <a href="https://www.elecrow.com/blog/the-technology-behind-mobike-sharing-bicycle.html" target="_blank">
+                        <a href="https://www.elecrow.com/blog/the-technology-behind-mobike-sharing-bicycle.html"
+                            target="_blank">
                             The Technology behind Mobike Sharing Bicycle
                         </a>&nbsp;(Author unbekannt, zuletzt aufgerufen: 23.05.2022)​
                     </li>
                     <li>
-                        <a href="https://qz.com/942372/mobike-one-of-chinas-top-bike-sharing-startups-is-now-paying-users-to-ride-its-bikes/" target="_blank">
+                        <a href="https://qz.com/942372/mobike-one-of-chinas-top-bike-sharing-startups-is-now-paying-users-to-ride-its-bikes/"
+                            target="_blank">
                             One of China’s top bike-sharing startups is now paying users to ride its bikes
                         </a>&nbsp;(Author Josh Horwitz, zuletzt aufgerufen: 23.05.2022)​
                     </li>
                     <li>
-                        <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.uni-bremen.de/fileadmin/user_upload/sites/artec/Publikationen/artec_Paper/182_paper.pdf&ved=2ahUKEwiR_ZDWwPj3AhWLSfEDHdImBwkQFnoECBUQAQ&usg=AOvVaw2Qa2p5YTnz-jKw_da_k0Do" target="_blank">
+                        <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.uni-bremen.de/fileadmin/user_upload/sites/artec/Publikationen/artec_Paper/182_paper.pdf&ved=2ahUKEwiR_ZDWwPj3AhWLSfEDHdImBwkQFnoECBUQAQ&usg=AOvVaw2Qa2p5YTnz-jKw_da_k0Do"
+                            target="_blank">
                             Fahrradverleihsysteme als Element von Fahrradstädten.<br>
                             [.1] Seite 18<br>
-                            [.2] Seite 29<br>    
+                            [.2] Seite 29<br>
                             [.3] Seite 38<br>
                         </a>(Author Karolina Ziehm, zuletzt aufgerufen: 24.5.2022)​
                     </li>
                     <li>
-                        <a href="https://deutschland-geliebte-bananenrepublik.de/e-scooter-verschandeln-die-staedte/" target="_blank">
+                        <a href="https://deutschland-geliebte-bananenrepublik.de/e-scooter-verschandeln-die-staedte/"
+                            target="_blank">
                             E-Scooter verschandeln die Städte
                         </a>&nbsp;(Author Dr. Lothar Ulsamer, zuletzt aufgerufen: 24.05.2022)​
                     </li>
                     <li>
-                        <a href="https://www.handelsblatt.com/unternehmen/leasing/call-a-bike-wie-die-bahn-mit-versteckten-strafgebuehren-bei-leihraedern-kunden-verprellt/23202660.html" target="_blank">
-                            Wie die Bahn mit versteckten Strafgebühren bei Leihrädern Kunden verprellt 
+                        <a href="https://www.handelsblatt.com/unternehmen/leasing/call-a-bike-wie-die-bahn-mit-versteckten-strafgebuehren-bei-leihraedern-kunden-verprellt/23202660.html"
+                            target="_blank">
+                            Wie die Bahn mit versteckten Strafgebühren bei Leihrädern Kunden verprellt
                         </a>&nbsp;(Authoren Demling, Dörnfelder, Scheuer, zuletzt aufgerufen: 24.05.2022)​
                     </li>
                 </ol>
