added index to href

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                             <span>
                                 Die Ortung von Zweirädern kann durch ein GPS-Modul erreicht werden. Zweiräde der Firma
                                 Nextbike nutzen ein solches Modul<a class="source-reference"
-                                    href="#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
+                                    href="index#sources"><sup>[1]</sup></a>. Um technisch unabhängiger
                                 zu werden, wird dieses Konzept allerdings ein generisches GNSS Modul nutzen.
                             </span>
                         </div>
@@ -505,7 +505,7 @@
                             Abrechnung
                         </div>
                         <div class="content">
-                            
+
                         </div>
                     </div>
                     <div class="topic" id="komponente-wartung">
