Erklärung zum offenen Energiefluss bei abstraktem Systemabbild

--- a/index.html
+++ b/index.html
@@ -463,7 +463,9 @@
                         <div class="content">
                             <div class="column">
                                 <span>
-                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten.
+                                    Aus der Funktionsanalyse lässt sich ein abstraktes Systemabbild ableiten. Der
+                                    Energiefluss der Stromversorgung ist offen, da er in Abhängigkeit von der
+                                    gewählten Komponente terminiert.
                                 </span>
                                 <div class="image-container">
                                     <img src="wwwroot/images/Systemabbild - Abstrakt.jpg">
