base tag uncommented

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Systemanalyse von Zweiradverleihsystemen
     </title>
     <meta charset="utf8" />
-    <!--<base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">-->
+    <base href="https://paulbraetz.github.io/Zweiradverleihsysteme/">
     <link rel="stylesheet" type="text/css" href="wwwroot/css/site.css?v=1" />
     <link rel="icon" type="image/x-icon" href="wwwroot/favicon.ico?v=1" />
 </head>
@@ -601,7 +601,32 @@
                 Umsetzungskritik
             </summary>
             <div class="content">
-
+                <div class="column">
+                    <div class="topic">
+                        <div class="title">
+                            Wissenchaft
+                        </div>
+                        <div class="content">
+                            Aufgrund der Tatsache, dass Zweiradverleihsysteme für den Außenbetrieb konzipiert und umkgesetzt sind, 
+                        </div>
+                    </div>
+                    <div class="topic">
+                        <div class="title">
+                            Medien
+                        </div>
+                        <div class="content">
+                            
+                        </div>
+                    </div>
+                    <div class="topic">
+                        <div class="title">
+                            Autoren
+                        </div>
+                        <div class="content">
+                            
+                        </div>
+                    </div>
+                </div>
             </div>
         </details>
         <details id="quellenverzeichnis" class="topic" open="">
